Wrong margin in card hit component fixed

--- a/src/components/atoms/ReadingTime/ReadingTime.scss
+++ b/src/components/atoms/ReadingTime/ReadingTime.scss
@@ -31,3 +31,9 @@
     }
   }
 }
+
+.article-card__link {
+  .article__reading-time {
+    margin-left: 1rem;
+  }
+}
